# aethelix

./: CMakeLists.txt  COMPARISON_BENCHMARKS.md  Dockerfile  EDUCATIONAL.md  LICENSE  README.md  aethelix.gpr  docker-compose.yml  main.py  nasa_results.txt  profile.txt  pyproject.toml  requirements.txt  subthreshold_results.txt
ada/: aethelix_binding.ads
analysis/: residual_analyzer.py
causal_graph/: __init__.py  graph_compiler.py  graph_definition.py  graph_ids.json  root_cause_ranking.py  stateful_ranking.py
dashboard/: app.py
data/: sentinel1b_failure.csv  sentinel1b_nominal.csv
docs/: benchmark_results.txt  ecss_mapping.md  leadtime_results.txt  nasa_benchmark_results.txt  paper.md  satellite_primer.md  theoretical_foundations.md
examples/sentinel1b/: README.md  anomaly_simulation.py
hal/: ccsds_adapter.py  csv_adapter.py  interface.py
include/: aethelix.h  aethelix_graph_ids.h
ingestion/: ccsds_parser.py
notebooks/: demo.ipynb
operational/: anomaly_detector.py  streamer.py
output/: pcoe_benchmark_results.json
rust_core/: Cargo.toml  build.rs
rust_core/.cargo/: config.toml
rust_core/src/: ccsds.rs  ffi.rs  graph_traversal.rs  lib.rs  python_bindings.rs
rust_core/src/flight/: causal_ranker.rs  ccsds_flight.rs  fdir_output.rs  fixed_point.rs  ks_detector.rs  mod.rs  ring_buffer.rs
scratch/: test_cycle.py  verify_changes.py
scripts/: benchmark.py  build_pdf.py  leon3_bench.sh  nasa_benchmark.py  pcoe_benchmark.py  streaming_benchmark.py  subthreshold_benchmark.py
simulator/: adcs.py  comms.py  obc.py  power.py  propulsion.py  thermal.py
tests/formal/: verify_graph.py
