[package]
name = "aethelix_core"
version = "0.2.0"
edition = "2021"
description = "Satellite Telemetry Causal Diagnostic Framework"
license = "Apache-2.0"
repository = "https://github.com/rudywasfound/aethelix"

[[bin]]
name = "aethelix_core"
path = "src/bin/main.rs"
required-features = ["ground"]

[[bin]]
name = "leon3_bench"
path = "src/bin/leon3_bench.rs"
required-features = ["flight"]

[lib]
name = "aethelix_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]



[dependencies]
micromath = { version = "2", optional = true, default-features = false }
nalgebra = { version = "0.32", optional = true }
ndarray  = { version = "0.15", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
serde      = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
log         = { version = "0.4", optional = true }
env_logger  = { version = "0.10", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
thiserror = { version = "1.0", optional = true }
anyhow    = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5" 


[features]

flight = ["micromath"]
ground = ["python", "async", "std"]
python = ["pyo3"]
async  = ["tokio"]
std    = [
    "serde", "serde_json", "log", "env_logger", "chrono",
    "nalgebra", "ndarray", "thiserror", "anyhow",
]


default = ["ground"]


[profile.release]
opt-level     = "s"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true     

[profile.dev]
opt-level = 0
debug     = true
panic     = "unwind"
